--- a/Pet-store/Views/UI/Product.xaml
+++ b/Pet-store/Views/UI/Product.xaml
@@ -20,13 +20,9 @@
             <TextBox Text="{Binding Rating, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Рейтинг" Margin="0 10"/>
             <TextBox Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Цена" Margin="0 10"/>
             <ComboBox ItemsSource="{Binding CategoriesList, UpdateSourceTrigger=PropertyChanged}"
+                      DisplayMemberPath="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
                       SelectedItem="{Binding SelectedCategoryCB, UpdateSourceTrigger=PropertyChanged}"
                       materialDesign:HintAssist.Hint="Категории" materialDesign:HintAssist.HintOpacity=".26" IsEditable="True" Margin="0 10">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="SelectionChanged">
                         <i:InvokeCommandAction Command="{Binding AddCategory}"/>
@@ -34,7 +30,7 @@
                 </i:Interaction.Triggers>
             </ComboBox>
             <DataGrid ItemsSource="{Binding SelectedCategories, UpdateSourceTrigger=PropertyChanged}" 
-                      SelectedItem="{Binding SelectedCategoryDG, UpdateSourceTrigger=PropertyChanged}" 
+                      SelectedItem="{Binding SelectedCategoryDG, UpdateSourceTrigger=PropertyChanged}"
                       AutoGenerateColumns="False" IsReadOnly="True">
                 <DataGrid.Columns>
                     <DataGridTextColumn Width="300" Header="Наименование категорий" 
