--- a/Pet-store/Views/UI/User.xaml
+++ b/Pet-store/Views/UI/User.xaml
@@ -16,13 +16,8 @@
         <StackPanel Orientation="Vertical" Margin="50 0">
             <ComboBox ItemsSource="{Binding ListRoles, UpdateSourceTrigger=PropertyChanged}"
                       SelectedItem="{Binding SelectedRole, UpdateSourceTrigger=PropertyChanged}"
-                      Margin="0 20">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
+                      DisplayMemberPath="{Binding Name, UpdateSourceTrigger=PropertyChanged}"
+                      Margin="0 20"/>
 
             <TextBox Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}" FontSize="18"/>
             <TextBox Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" FontSize="18"/>
